// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test RequireJs registrations + registration while getting Automatic registration while getting package 1`] = `
Object {
  "cdnjscloudflarecomajaxlibsreactumdreactproductionmin": Array [
    Object {
      "filetypes": Object {
        "js": Object {
          "dfr": Promise {},
          "urls": Array [
            "https://cdnjs.cloudflare.com/ajax/libs/react/16.14.0/umd/react.production.min.js",
          ],
        },
      },
      "major": 16,
      "minor": 14,
      "patch": 0,
      "str": "16.14.0",
    },
  ],
}
`;

exports[`Test shim functionality check if dependencies an be added to different filetypes 1`] = `
Object {
  "dependenciesPreLoad": Array [
    "dep1",
  ],
  "postFactory": [Function],
  "urls": Array [],
}
`;

exports[`Test shim functionality check if shim exports can be a function 1`] = `
Object {
  "postFactory": [Function],
  "urls": Array [],
}
`;

exports[`Test shim functionality check if shims are registered on unknown packages 1`] = `
Object {
  "js": Object {
    "dependenciesPreLoad": Array [
      "dep1",
      "dep2",
    ],
    "postFactory": [Function],
    "urls": Array [],
  },
}
`;
